2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.ui_l10n_stats): Support for
	stringfreeze per-module.

	* gnome-modules.xml.in: Added gtk+.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: 
	* view-module.py (get_stats_for): Added info messages.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* database.py:
	* modules.py:
	* update-stats.py:
	* view-module.py: Updates.

	* templates/module.tmpl: Initial stuff.
	* data/main.css: Added.
	* data/*.png: Added.

2006-03-06  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.getDocuments)
	(XmlModules.getTranslationDomains): Bug fixes.

2006-03-05  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Added cvsweb support.
	* defaults.py (cvsweb): Added.

2006-03-05  Danilo Šegan  <danilo@gnome.org>

	* defaults.py (documents): 
	* update-stats.py (Statistics.doc_l10n_stats)
	(Statistics.__init__): Sync with modules.py changes.

	* modules.py (XmlModules.getBranches)
	(XmlModules.getTranslationDomains, XmlModules.getDocuments):
	Switch to dicts for translation domains and documents as well.

2006-03-05  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Added.

2006-03-05  Danilo Šegan  <danilo@gnome.org>

	* templates/: Added.
