@@ -1,3 +1,5 @@
 
-gnome-modules.xml: gnome-modules.xml.in
+%.xml: %.xml.in
 	intltool-merge -x . $< $@
+
+all: gnome-modules.xml translation-teams.xml releases.xml
