@@ -1,0 +1,32 @@
+<teams>
+ 
+ <team id="sr">
+   <_language code="sr">Serbian</_language>
+   <_language code="sr@Latn">Serbian Latin</_language>
+   <_language code="sr@ije">Serbian Jekavian</_language>
+
+   <coordinator>
+     <name>Danilo Šegan</name>
+     <irc-nickname>danilo</irc-nickname>
+     <email>danilo@gnome.org</email>
+     <im>danilo@kvota.net</im>
+     <webpage>http://danilo.segan.org/</webpage>
+     <bugzilla-account>danilo@gnome.org</bugzilla-account><!-- default to email -->
+   </coordinator>
+
+   <webpage>http://prevod.org/</webpage>
+   <userpage>http://prevod.org/</userpage>
+
+   <bugzilla>
+     <product>l10n</product>
+     <component>Serbian [sr]</component>
+   </bugzilla>
+
+   <mailing-list>
+     <mail-to>gnom@prevod.org</mail-to>
+     <subscribe>http://postar.prevod.org/mailman/listinfo/gnom</subscribe>
+   </mailing-list>
+ </team>
+
+
+</teams>
