@@ -1,5 +1,15 @@
 2006-03-07  Danilo Šegan  <danilo@gnome.org>
 
+	* data/main.css: 
+	* templates/module.tmpl: Prettyfying.
+
+2006-03-07  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-teams.xml.in: Added.
+	* releases.xml.in: Added.
+
+2006-03-07  Danilo Šegan  <danilo@gnome.org>
+
 	* update-stats.py (LocStatistics.ui_l10n_stats): Support for
 	stringfreeze per-module.
 
